# vibe-docx

./: .gitignore  README.md  SKILL.md  pyproject.toml
.iflow/skills/vibe-docx/scripts/: builder.py  install_skill.py
references/: api.md  examples.md  intent-mapping.csv  tech-spec-v1.2.md  templates.md  workflows.md
scripts/: __init__.py  install_skill.py  markdown.py  validator.py
tests/: test_core.py  test_e2e.py  test_integration.py  test_v13_features.py
vibe_docx/: __init__.py  cli.py  toc.py  version.py
vibe_docx/core/: __init__.py  result.py
vibe_docx/models/: __init__.py  error.py
vibe_docx/skill_assets/: SKILL.md
vibe_docx/skill_assets/references/: api.md
vibe_docx/utils/: __init__.py
